# GeoMapProjector

./: .gitignore  README.md
GeoMapProjector/: CMakeLists.txt  Kópia - extreme_points_on_earth.xlsx  controller.cpp  coords.cpp  database.cpp  db_loader.cpp  extreme_points_on_earth.xlsx  extreme_points_on_earth_continents.csv  extreme_points_on_earth_countries.csv  extreme_points_on_earth_lakes.csv  extreme_points_on_earth_mountains.csv  main.cpp  my_math.cpp  my_math.hpp  projections.cpp  sources.md  worldcities_mega_db.csv
GeoMapProjector/include/: coords.hpp  database.hpp  my_math.hpp  projections.hpp
GeoMapProjector/src/: controller.cpp  coords.cpp  database.cpp  db_loader.cpp  main.cpp  my_math.cpp  projections.cpp
